Fixing aria values and contrast for accessibility

--- a/lms/static/sass/course/modules/_calculator.scss
+++ b/lms/static/sass/course/modules/_calculator.scss
@@ -37,14 +37,20 @@ div.calc-main {
       background-color: $black;
       top: -36px;
     }
+
+    .utility-control-label {
+      background: $black;
+      color: $white;
+    }
   }
 
   div#calculator_wrapper {
-    background: $black;
     clear: both;
-    max-height: 90px;
     position: relative;
     top: -36px;
+    max-height: 90px;
+    background: $black;
+    color: $white;
 
     // UI: input help table
     .calculator-input-help-table {
@@ -61,6 +67,12 @@ div.calc-main {
       @extend .clearfix;
       @include box-sizing(border-box);
       padding: lh();
+
+      label.sr {
+        // including the label here in case other .sr values are added
+        // we want to limit this 'white' only to the label
+        color: $white;
+      }
 
       button#calculator_button {
         background: #111;
@@ -81,6 +93,13 @@ div.calc-main {
 
         &:hover, &:focus {
           color: #333;
+        }
+
+        span.sr {
+          // including the element here in case other .sr values are added
+          // we want to limit this 'white' only to the span
+          background: $black;
+          color: $white;
         }
       }
 
@@ -125,18 +144,30 @@ div.calc-main {
           right: 0;
           top: 0;
 
+          #hint-instructions {
+            color: $white;
+          }
+
           #calculator_hint {
-            background: url("../images/info-icon.png") center center no-repeat;
-            height: 35px;
             @include hide-text;
-            width: 35px;
             display: block;
+            height: 35px;
+            width: 35px;
             border: none;
+            background: url("../images/info-icon.png") center center no-repeat;
+            color: $white;
 
             &:focus {
               outline: 5px auto #5b9dd9;
               box-shadow: none;
               border: none;
+            }
+
+            span.sr {
+              // including the element here in case other .sr values are added
+              // we want to limit this 'white' only to the span
+              background: $black;
+              color: $white;
             }
           }
 
